Make footer, modify desc font style

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             </div>
             <div class="text_wrap">
                 <div class="text_menu">
-                    <a class="linemap" href="#">Proposed Bill</a>
-                    <a class="linemap" href="#">Infringement of Basic Rights</a>
-                    <a class="linemap" href="#">Bill Supporters</a>
-                    <a class="linemap" href="#">Lack of Fairness and Legitimacy</a>
+                    <a class="linemap" href="#">Proposed Bill &gt;</a>
+                    <a class="linemap" href="#">Infringement of Basic Rights &gt;</a>
+                    <a class="linemap" href="#">Bill Supporters &gt;</a>
+                    <a class="linemap" href="#">Lack of Fairness and Legitimacy &gt;</a>
                     <a class="linemap" href="#">Take Action</a>
                 </div>
                 <div class="title">Stop Internet Censoring</div>
@@ -118,9 +118,89 @@
                     Assembly in December 2017 and the webcomic writers have crusaded to make the bill enacted, KCSC’s blocking
                     decisions have tripled in 2018 (from 777 in 2017 to 2,338 in 2018). Further, KCSC tries to simplify the
                     reporting and examination procedures for blocking decisions, implying a weakened procedural fairness.
+                    <img class="graph_img" src="images/graph.png" alt="Graph about KCSC Blocking Decisions Against Foreign Pirate Websites">
+                </div>
+                <div class="subtitle">Lack of Fairness and Legitimacy</div>
+                <div class="desc">
+                    The copyright protection agency, i.e., KCoPA, is not a proper body to hold a power of website blocking as designed by the bill. <br>
+                    <div class="rect_list">
+                        Firstly, KCoPA was established in 2016 by an amendment of the Copyright Act. Its mandate is to provide copyright protection services (Article 122-2 of the Copyright Act). The birth of KCoPA has a historical background. MCST had long provided financial support to Copyright Protection Center, a private organization and one of the main branches of the largest association of copyright industries. The tax money that MCST had provided for the copyright industries amounted KRW 29.9 billions for five years from 2011 to 2015. However, this huge financial support turned out to lack statutory grounds. One way the MCST to avoid this problem is making the private Copyright Protection Center into a public body.
+                    </div>
+                    <div class="rect_list">
+                        Secondly, KCoPA violates the Copyright Act. The Act requires KCoPA to constitute its committee by keeping a balance between the number of members reflecting the interests of copyright holders and those reflecting the interests of users (Article 122-6 of the Copyright Act). Yet, the committee was not formed under this requirement, and KCoPA has no plan to change the committee construction before a three-years statutory term of office of the existing committee members.
+                    </div>
+                </div>
+                <div class="subtitle">Take Action</div>
+                <div class="desc">
+                    Are you against this idea? Send message to members of Legislation & Judiciary committee. <br>
+                    <br><b>How to Participate</b>
+                    <div class="circle_num">
+                        Click whatever SNS you use in the table of committee members below.
+                    </div>
+                    <div class="circle_num">
+                        Facebook : Send a direct message or reply on posts.
+                    </div>
+                    <div class="circle_num">
+                        Blog : Send a note to them or reply on posts.
+                    </div>
+                    <div class="circle_num">
+                        Twitter : Send DM or twit to them.
+                    </div>
+                    <div class="circle_num">
+                        Twitter : Send DM or twit to them.
+                    </div>
+
+                    <table class="committee_list">
+                        <tr>
+                            <th>No.</th>
+                            <th>Role</th>
+                            <th>Name</th>
+                            <th>Party</th>
+                            <th>Facebook</th>
+                            <th>Blog</th>
+                            <th>Twitter</th>
+                            <th>Youtube</th>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Chairperson</td>
+                            <td>Sangkyu Yeo</td>
+                            <td>Liberty Korea</td>
+                            <td>ICON</td>
+                            <td>ICON</td>
+                            <td>ICON</td>
+                            <td>ICON</td>
+                        </tr>
+                    </table>
+
+
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- footer -->
+    <div class="footer">
+        <div class="footer_wrap">
+            <div class="sponsors footer_font">
+                SPONSORED BY COMMONS FOUNDATION, JINBONET, and OPENNET.
+            </div>
+            <div class="share_via footer_font">
+                SHARE VIA
+            </div>
+            <div class="sns_share footer_font">
+                <div class="sns_icon">
+                    <img src="images/sns_1_fb.png" alt="Facebook share icon">
+                </div>
+                <div class="sns_icon">
+                    <img src="images/sns_2_twitter.png" alt="Twitter share icon">
+                </div>
+                <div class="sns_icon">
+                    <img src="images/sns_3_url.png" alt="Url copy icon">
+                </div>    
+            </div>
+        </div>
+        
     </div>
 
 </body>
