Make sponsor section

--- a/index.html
+++ b/index.html
@@ -175,6 +175,25 @@
 
 
                 </div>
+                <div class="subtitle">Sponsors</div>
+                <div class="desc">
+                    This website is sponsored by the Commons Foundation, Jinbonet, and Opennet.<br>
+                    <div class="sponsor_logo">
+                        <a href="https://commons.foundation/" target="_blank">
+                            <img src="images/sponsor1_commonsfoudnation.png" alt="Sposor logo - Commons Foundation">
+                        </a>
+                    </div>
+                    <div class="sponsor_logo">
+                        <a href="https://www.jinbo.net/" target="_blank">
+                            <img src="images/sponsor2_jinbonet.png" alt="Sposor logo - Jinbonet">
+                        </a>
+                    </div>
+                    <div class="sponsor_logo">
+                        <a href="https://opennet.or.kr/" target="_blank">
+                            <img src="images/sponsor3_opennet.png" alt="Sposor logo - Opennet">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
