Add rect list style

--- a/index.html
+++ b/index.html
@@ -123,11 +123,27 @@
                 <div class="subtitle">Lack of Fairness and Legitimacy</div>
                 <div class="desc">
                     The copyright protection agency, i.e., KCoPA, is not a proper body to hold a power of website blocking as designed by the bill. <br>
-                    <div class="rect_list">
-                        Firstly, KCoPA was established in 2016 by an amendment of the Copyright Act. Its mandate is to provide copyright protection services (Article 122-2 of the Copyright Act). The birth of KCoPA has a historical background. MCST had long provided financial support to Copyright Protection Center, a private organization and one of the main branches of the largest association of copyright industries. The tax money that MCST had provided for the copyright industries amounted KRW 29.9 billions for five years from 2011 to 2015. However, this huge financial support turned out to lack statutory grounds. One way the MCST to avoid this problem is making the private Copyright Protection Center into a public body.
+                    
+                    <div class="rect_li">
+                        <div class="rect"></div>
+                        <div class="rect_desc">
+                            Firstly, KCoPA was established in 2016 by an amendment of the Copyright Act. Its mandate is to provide copyright
+                            protection services (Article 122-2 of the Copyright Act). The birth of KCoPA has a historical background. MCST had long
+                            provided financial support to Copyright Protection Center, a private organization and one of the main branches of the
+                            largest association of copyright industries. The tax money that MCST had provided for the copyright industries amounted
+                            KRW 29.9 billions for five years from 2011 to 2015. However, this huge financial support turned out to lack statutory
+                            grounds. One way the MCST to avoid this problem is making the private Copyright Protection Center into a public body.
+                        </div>
+                        
                     </div>
-                    <div class="rect_list">
-                        Secondly, KCoPA violates the Copyright Act. The Act requires KCoPA to constitute its committee by keeping a balance between the number of members reflecting the interests of copyright holders and those reflecting the interests of users (Article 122-6 of the Copyright Act). Yet, the committee was not formed under this requirement, and KCoPA has no plan to change the committee construction before a three-years statutory term of office of the existing committee members.
+                    <div class="rect_li">
+                        <div class="rect"></div>
+                        <div class="rect_desc">
+                            Secondly, KCoPA violates the Copyright Act. The Act requires KCoPA to constitute its committee by keeping a balance
+                            between the number of members reflecting the interests of copyright holders and those reflecting the interests of users
+                            (Article 122-6 of the Copyright Act). Yet, the committee was not formed under this requirement, and KCoPA has no plan to
+                            change the committee construction before a three-years statutory term of office of the existing committee members.
+                        </div>
                     </div>
                 </div>
                 <div class="subtitle">Take Action</div>
@@ -149,8 +165,7 @@
                     <div class="circle_num">
                         Twitter : Send DM or twit to them.
                     </div>
-
-                    <table class="committee_list">
+                    <table class="committee_li">
                         <tr>
                             <th>No.</th>
                             <th>Role</th>
@@ -171,9 +186,17 @@
                             <td>ICON</td>
                             <td>ICON</td>
                         </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Administrator</td>
+                            <td>Kihun Song</td>
+                            <td>Democratic Party</td>
+                            <td>ICON</td>
+                            <td>ICON</td>
+                            <td>ICON</td>
+                            <td>ICON</td>
+                        </tr>
                     </table>
-
-
                 </div>
                 <div class="subtitle">Sponsors</div>
                 <div class="desc">
