Add circle list style

--- a/index.html
+++ b/index.html
@@ -149,22 +149,50 @@
                 <div class="subtitle">Take Action</div>
                 <div class="desc">
                     Are you against this idea? Send message to members of Legislation & Judiciary committee. <br>
-                    <br><b>How to Participate</b>
-                    <div class="circle_num">
-                        Click whatever SNS you use in the table of committee members below.
+                    <div class="part_desc">
+                        How to Participate
                     </div>
-                    <div class="circle_num">
-                        Facebook : Send a direct message or reply on posts.
+                    <div class="circle_li">
+                        <div class="circle">
+                            <div class="circle_num">1</div>
+                        </div>
+                        <div class="circle_desc">
+                            Click whatever SNS you use in the table of committee members below.
+                        </div>
                     </div>
-                    <div class="circle_num">
-                        Blog : Send a note to them or reply on posts.
+                    <div class="circle_li">
+                        <div class="circle">
+                            <div class="circle_num">2</div>
+                        </div>
+                        <div class="circle_desc">
+                            Facebook : Send a direct message or reply on posts.
+                        </div>
                     </div>
-                    <div class="circle_num">
-                        Twitter : Send DM or twit to them.
+                    <div class="circle_li">
+                        <div class="circle">
+                            <div class="circle_num">3</div>
+                        </div>
+                        <div class="circle_desc">
+                            Blog : Send a note to them or reply on posts.
+                        </div>
                     </div>
-                    <div class="circle_num">
-                        Twitter : Send DM or twit to them.
+                    <div class="circle_li">
+                        <div class="circle">
+                            <div class="circle_num">4</div>
+                        </div>
+                        <div class="circle_desc">
+                            Twitter : Send DM or twit to them.
+                        </div>
                     </div>
+                    <div class="circle_li">
+                        <div class="circle">
+                            <div class="circle_num">5</div>
+                        </div>
+                        <div class="circle_desc">
+                            Youtube : Reply on their videos.
+                        </div>
+                    </div>
+
                     <table class="committee_li">
                         <tr>
                             <th>No.</th>
