Modify meta tags and mobile style

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <title>Stop Internet Censoring</title>
-    <meta name="description" content="" />
+    <meta name="description" content="This website was created to oppose the Korean government's attempts to censor the Internet." />
     <meta name="image" content="./images/meta.jpg" />
 
     <link rel="canonical" href="https://stopinternetcensoring.org/">
 
     <meta itemprop="name" content="Stop Internet Censoring">
-    <meta itemprop="description" content="">
+    <meta itemprop="description" content="This website was created to oppose the Korean government's attempts to censor the Internet.">
     <meta itemprop="image" content="./images/meta.jpg" />
 
     <meta property="og:url" content="https://stopinternetcensoring.org/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Stop Internet Censoring" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content=This website was created to oppose the Korean government's attempts to censor the Internet." />
     <meta property="og:image" content="./images/meta.jpg" />
     <meta property="og:image:alt" content="Stop Internet Censoring">
     <meta property="og:site_name" content="Stop Internet Censoring">
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="website"/>
     <meta name="twitter:site" content="@"/>
     <meta name="twitter:title" content="Stop Internet Censoring"/>
-    <meta name="twitter:description" content=""/>
+    <meta name="twitter:description" content="This website was created to oppose the Korean government's attempts to censor the Internet."/>
     <meta name="twitter:creator" content="@" />
     <meta name="twitter:image" content="./images/meta.jpg" />
 
@@ -82,12 +82,15 @@
     <!-- Main -->
     <div class="container mb-0 px-0 shadow bg-white">
       <!-- Header -->
-      <img class="w-100" src="./images/hdear.png" alt="Stop internet censoring" />
+      <img class="header_img" src="./images/hdear.png" alt="Stop internet censoring" />
 
       <!-- Body -->
-      <div class="container mb-0">
+      <div class="container mb-0 wrap">
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb">
+          <div class="d-block d-sm-none">
+            <div class="rect"></div>
+          </div>
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a class="smooth" href="#bill">Proposed Bill</a></li>
             <li class="breadcrumb-item"><a class="smooth" href="#rights">Infringement of Basic Rights</a></li>
@@ -198,7 +201,6 @@
           </p>
         </section>
         
-
         <section class="mb-5" id="take_action">
           <h2 class="subtitle">Take Action</h2>
           <p class="lead">
@@ -272,20 +274,20 @@
         </div>
         <div class="share_via footer_font">
           SHARE VIA
-          <div class="sns_icon" onclick="window.open('http://www.facebook.com/sharer/sharer.php?u=https%3A//stopinternetcensoring.org/&title=Stop%20Internet%20Censoring','popUpWindow','width=580, height=500, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
+          <div class="sns_icon"
+            onclick="window.open('http://www.facebook.com/sharer/sharer.php?u=https%3A//stopinternetcensoring.org/&title=Stop%20Internet%20Censoring','popUpWindow','width=580, height=500, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
             <img src="images/sns_1_fb.png" alt="Facebook share icon">
           </div>
-          <div class="sns_icon" onclick="window.open('http://twitter.com/intent/tweet?status=Stop%20Internet%20Censoring%20%23Internet%5FFreedom%20%23Stop%5FInternet%5FCensoring%20%23https%5Fblock+https%3A//stopinternetcensoring.org/','popUpWindow','width=500, height=300, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
+          <div class="sns_icon"
+              onclick="window.open('http://twitter.com/intent/tweet?status=Stop%20Internet%20Censoring%20%23Internet%5FFreedom%20%23Stop%5FInternet%5FCensoring%20%23https%5Fblock+https%3A//stopinternetcensoring.org/','popUpWindow','width=500, height=300, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
             <img src="images/sns_2_twitter.png" alt="Twitter share icon">
-          </div>
-          <div class="sns_icon" id="copy_url">            
+           </div>
+          <div class="sns_icon" id="copy_url">
             <img src="images/sns_3_url.png" alt="Url copy icon">
           </div>
         </div>
       </div>
     </div>
-
-
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -460,7 +462,7 @@
       function createRow(index, role, name, party, fb, bl, tw, yt) {
         var _output = '';
         _output += '<tr>';
-        _output += '<th scope="row">' + index + '</th>';
+        _output += '<th>' + index + '</th>';
         _output += '<td>' + role + '</td>';
         _output += '<td>' + name + '</td>';
         _output += '<td>' + party + '</td>';
