Modify mobile styles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="container px-0">
           <a class="navbar-brand d-inline-flex" href="/">
             <img class="logo" src="./images/SIC_logo.png" alt="Stop Internet Censoring Logo" />
-            <div class="logo-text d-flex align-items-center ml-1">Stop<br />Internet<br />Censoring</div>
+            <div class="logo-text d-flex align-items-center">Stop<br />Internet<br />Censoring</div>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
