Fix header image

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
     <!-- Main -->
     <div class="container mb-0 px-0 shadow bg-white">
       <!-- Header -->
-      <img class="header_img" src="./images/hdear.png" alt="Stop internet censoring" />
+      <div class="header">
+
+      </div>
+      <!-- <img class="header_img" src="./images/hdear.png" alt="Stop internet censoring" /> -->
 
       <!-- Body -->
       <div class="container mb-0 wrap">
